# catgo-LRG

./: .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  readme.md  readme.zh.md  vite.desktop.config.ts  wrangler.app.toml  wrangler.docs.toml
.github/: copilot-instructions.md
.github/workflows/: deploy-cloudflare.yml  ios-build.yml  tauri-build.yml  vsix-publish.yml
.understand-anything/: .understandignore  config.json  fingerprints.json  knowledge-graph.json  meta.json
.understand-anything/tmp/: extract-input-1.json  extract-input-10.json  extract-input-100.json  extract-input-101.json  extract-input-102.json  extract-input-103.json  extract-input-104.json  extract-input-105.json  extract-input-107.json  extract-input-11.json  extract-input-111.json  extract-input-112.json  extract-input-113.json  extract-input-117.json  extract-input-118.json  extract-input-119.json  (+247 more)
desktop/: App.svelte  Sidebar.svelte  StructureLibrary.svelte  TabBar.svelte  WorkflowView.svelte  main.ts  pane-utils.ts  sidebar-utils.ts
docs/: index.md
extensions/catrender-wasm/: Cargo.toml
extensions/catrender-wasm/src/: bonds.rs  color.rs  fog.rs  geom.rs  lib.rs  orient.rs  palette.rs  perceive.rs  preset.rs  svg.rs  types.rs  vdw.rs
extensions/catrender-wasm/src/presets/: btube.json  default.json  graph.json  mtube.json  overlay.json  pmol.json  tube.json  wire.json
scripts/: agent-dev.mjs  patch-linuxdeploy-sidecars.mjs  setup.mjs
server/: catgo_server.spec  main.py  pyproject.toml
src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
tests/: test_catrender_bridge.py
(+495 files in other folders)
