[package]
name = "catrender-wasm"
version = "0.1.0"
edition = "2021"
description = "Publication-quality molecular SVG renderer — compiled to WebAssembly"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
